--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,7 @@
 body {
 	width: 100%;
 	height: 100vh;
-	overflow-y: auto;
+	overflow: hidden;
 	background: #000;
 	color: #fff;
 }
@@ -34,10 +34,25 @@ body {
 	gap: 180px;
 }
 
+.symbol-group {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .symbol {
 	font-size: 9rem;
 	line-height: 1;
 	font-weight: 900;
+}
+
+.help {
+	color: rgba(173, 173, 173, 0.193);
+	height: 60px;
+	font-size: 1.8rem;
+	text-transform: lowercase;
+	text-align: center;
 }
 
 .input {
@@ -55,46 +70,56 @@ body {
 	border-color: #2a2a2e;
 }
 
-.input::placeholder {
-	color: rgba(173, 173, 173, 0.193);
-}
-
 .table-view {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	padding-top: 100px;
 	overflow: hidden;
+	width: 100%;
+	grid-gap: 0;
+	pointer-events: none;
 }
 
 .table {
-	display: flex;
-	flex-direction: column;
-	width: 950px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	width: 100%;
 }
 
 .table:first-child {
 	border-right: 1px solid #171717;
 }
 
-.table-row {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-}
-
-.table-col {
+.table-cell {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	padding: 20px 0;
+	height: 145px;
 }
 
-.table-col-symbol {
+.table-cell-symbol {
 	font-size: 3rem;
 	font-weight: 900;
 }
 
-.table-col-transcript {
+.table-cell-transcript {
 	font-size: 1.5rem;
 	opacity: 0.7;
+}
+
+.pagination {
+	text-align: center;
+	margin-top: 45px;
+	font-weight: 200;
+	font-size: 1.125rem;
+	opacity: 0.6;
+}
+
+.counter {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	text-align: right;
 }
