--- a/src/global.css
+++ b/src/global.css
@@ -8,8 +8,8 @@
   list-style: none;
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
-	color: #fff;
-	user-select: none;
+  color: #fff;
+  user-select: none;
 }
 
 body {
@@ -73,7 +73,7 @@ body {
 }
 
 .table-title {
-  height: calc((100vh - 870px) / 2);
+  height: calc((100vh - 780px) / 2);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -83,21 +83,36 @@ body {
 }
 
 .table-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
   width: 100%;
+}
+
+.table-container.col-2 {
+  grid-template-columns: 1fr 1fr;
+  display: grid;
   grid-gap: 0;
 }
 
 .table {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  width: 100%;
+  grid-template-columns: 190px 190px 190px 190px 190px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  height: 780px;
+}
+
+.table.col-4 {
+  grid-template-columns: 190px 190px 190px 190px;
 }
 
 .table:first-child {
   border-right: 1px solid #171717;
+}
+
+.table:last-child {
+  border-color: transparent;
 }
 
 .table-cell {
@@ -106,21 +121,31 @@ body {
   align-items: center;
   justify-content: center;
   padding: 20px 0;
-  height: 145px;
+  height: 130px;
 }
 
 .table-cell-symbol {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 900;
 }
 
 .table-cell-transcript {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   opacity: 0.7;
+  font-weight: 200;
+  letter-spacing: 0.05rem;
+}
+
+.footer {
+  height: calc((100vh - 780px) / 2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
 }
 
 .pagination {
-  height: calc((100vh - 870px) / 2);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -132,6 +157,14 @@ body {
 .pagination span {
   width: 20px;
   text-align: center;
+}
+
+.page-description {
+  text-align: center;
+  opacity: 0.7;
+  font-weight: 200;
+  line-height: 26px;
+  letter-spacing: 0.05rem;
 }
 
 .counter {
